--- a/src/app/user/header/header.component.html
+++ b/src/app/user/header/header.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid ">
         <a class="navbar-brand btn" routerLink="/">
             <span class="head text-danger">SB</span>
-            <span class="text-success p-2">Textile Manufacture Unit Pvt Ltd.</span>
+            <span class="text-success p-2">Textile Manufacturer & Supplier</span>
         </a>
 
         <!-- nav -->
