--- a/src/app/user/admin-products/admin-products.component.html
+++ b/src/app/user/admin-products/admin-products.component.html
@@ -6,30 +6,33 @@
         <div class="col-md-12 mt-5 mb-5 ">
             <h1 class="text-primary">OUR PRODUCTS</h1>
             <a class="btn btn-primary mt-4" routerLink="/user/admin-add-products">Add New Product</a>
-            <table class="table table-bordered mt-5 table-responsive card-body shadow" id="dataTable" width="100%"
-                cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>Product Name</th>
-                        <th>Small Description</th>
-                        <th>Sub Heading</th>
-                        <th>Description</th>
-                        <th>image</th>
-                        <th>Delete</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let product of allproducts">
-                        <td>{{product.productname}}</td>
-                        <td>{{product.smalldesc}}</td>
-                        <td>{{product.subheading}}</td>
-                        <td>{{product.description.slice(0, 50)}}...</td>
-                        <td><img width="100px" height="100px" [src]="product.imageurl" alt="image_url"></td>
-                        <td><button (click)="removeItem(product._id)" class="btn btn-danger"><i class="fa fa-trash"
-                                    aria-hidden="true"></i></button></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered mt-5  shadow" id="dataTable" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>Product Name</th>
+                                <th>Small Description</th>
+                                <th>Sub Heading</th>
+                                <th>Description</th>
+                                <th>image</th>
+                                <th>Delete</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let product of allproducts">
+                                <td>{{product.productname}}</td>
+                                <td>{{product.smalldesc}}</td>
+                                <td>{{product.subheading}}</td>
+                                <td>{{product.description.slice(0, 50)}}...</td>
+                                <td><img width="100px" height="100px" [src]="product.imageurl" alt="image_url"></td>
+                                <td><button (click)="removeItem(product._id)" class="btn btn-danger"><i
+                                            class="fa fa-trash" aria-hidden="true"></i></button></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
